--- a/confluent-kafka/docker-compose-multiple.yml
+++ b/confluent-kafka/docker-compose-multiple.yml
@@ -74,106 +74,40 @@ services:
       CONFLUENT_METRICS_ENABLE: 'true'
       CONFLUENT_SUPPORT_CUSTOMER_ID: 'anonymous'
       CONFLUENT_BALANCER_ENABLE: 'true'
-      KAFKA_LOGS_DIR: 'tmp/kafka-logs-1'
+      KAFKA_LOGS_DIR: 'tmp/kafka-logs-2'
 
-  # broker-2:
-  #   image: confluentinc/cp-server:6.0.1
-  #   hostname: broker-2
-  #   container_name: broker-2
-  #   depends_on:
-  #     - zookeeper
-  #   ports:
-  #     - "39092:39092"
-  #     - "9103:9103"
-  #   environment:
-  #     KAFKA_BROKER_ID: 2
-  #     KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
-  #     KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-  #     # changed localhost to broker in PLAINTEXT_HOST
-  #     KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka3:9092,PLAINTEXT_HOST://localhost:39092
-  #     KAFKA_METRIC_REPORTERS: io.confluent.metrics.reporter.ConfluentMetricsReporter
-  #     KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 2
-  #     KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
-  #     KAFKA_CONFLUENT_LICENSE_TOPIC_REPLICATION_FACTOR: 2
-  #     KAFKA_CONFLUENT_BALANCER_TOPIC_REPLICATION_FACTOR: 2
-  #     KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
-  #     KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 2
-  #     KAFKA_JMX_PORT: 9103
-  #     KAFKA_JMX_HOSTNAME: localhost
-  #     KAFKA_CONFLUENT_SCHEMA_REGISTRY_URL: http://schema-registry:8081
-  #     CONFLUENT_HTTP_SERVER_LISTENERS: http://localhost:8092
-  #     CONFLUENT_METRICS_REPORTER_BOOTSTRAP_SERVERS: broker:29092
-  #     CONFLUENT_METRICS_REPORTER_TOPIC_REPLICAS: 2
-  #     CONFLUENT_METRICS_ENABLE: 'true'
-  #     CONFLUENT_SUPPORT_CUSTOMER_ID: 'anonymous'
-  #     CONFLUENT_BALANCER_ENABLE: 'true'
-  #     KAFKA_LOGS_DIR: 'tmp/kafka-logs-2'
-
-  # broker-3:
-  #   image: confluentinc/cp-server:6.0.1
-  #   hostname: broker-3
-  #   container_name: broker-3
-  #   depends_on:
-  #     - zookeeper
-  #   ports:
-  #     - "9095:9095"
-  #     - "9104:9104"
-  #   environment:
-  #     KAFKA_BROKER_ID: 3
-  #     KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
-  #     KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-  #     # changed localhost to broker in PLAINTEXT_HOST
-  #     KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka4:9092,PLAINTEXT_HOST://localhost:49092
-  #     KAFKA_METRIC_REPORTERS: io.confluent.metrics.reporter.ConfluentMetricsReporter
-  #     KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 2
-  #     KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
-  #     KAFKA_CONFLUENT_LICENSE_TOPIC_REPLICATION_FACTOR: 2
-  #     KAFKA_CONFLUENT_BALANCER_TOPIC_REPLICATION_FACTOR: 2
-  #     KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
-  #     KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 2
-  #     KAFKA_JMX_PORT: 9104
-  #     KAFKA_JMX_HOSTNAME: localhost
-  #     KAFKA_CONFLUENT_SCHEMA_REGISTRY_URL: http://schema-registry:8081
-  #     CONFLUENT_HTTP_SERVER_LISTENERS: http://localhost:8093
-  #     CONFLUENT_METRICS_REPORTER_BOOTSTRAP_SERVERS: broker:29092
-  #     CONFLUENT_METRICS_REPORTER_TOPIC_REPLICAS: 2
-  #     CONFLUENT_METRICS_ENABLE: 'true'
-  #     CONFLUENT_SUPPORT_CUSTOMER_ID: 'anonymous'
-  #     CONFLUENT_BALANCER_ENABLE: 'true'
-  #     KAFKA_LOGS_DIR: 'tmp/kafka-logs-3'
-
-  # broker-4:
-  #   image: confluentinc/cp-server:6.0.1
-  #   hostname: broker-4
-  #   container_name: broker-4
-  #   depends_on:
-  #     - zookeeper
-  #   ports:
-  #     - "9096:9096"
-  #     - "9105:9105"
-  #   environment:
-  #     KAFKA_BROKER_ID: 4
-  #     KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
-  #     KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-  #     # changed localhost to broker in PLAINTEXT_HOST
-  #     KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://:9095
-  #     KAFKA_METRIC_REPORTERS: io.confluent.metrics.reporter.ConfluentMetricsReporter
-  #     KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 2
-  #     KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
-  #     KAFKA_CONFLUENT_LICENSE_TOPIC_REPLICATION_FACTOR: 2
-  #     KAFKA_CONFLUENT_BALANCER_TOPIC_REPLICATION_FACTOR: 2
-  #     KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
-  #     KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 2
-  #     KAFKA_JMX_PORT: 9105
-  #     KAFKA_JMX_HOSTNAME: localhost
-  #     KAFKA_CONFLUENT_SCHEMA_REGISTRY_URL: http://schema-registry:8081
-  #     CONFLUENT_HTTP_SERVER_LISTENERS: http://localhost:8094
-  #     CONFLUENT_METRICS_REPORTER_BOOTSTRAP_SERVERS: localhost:9092
-  #     CONFLUENT_METRICS_REPORTER_TOPIC_REPLICAS: 2
-  #     CONFLUENT_METRICS_ENABLE: 'true'
-  #     CONFLUENT_SUPPORT_CUSTOMER_ID: 'anonymous'
-  #     CONFLUENT_BALANCER_ENABLE: 'true'
-  #     KAFKA_LOGS_DIR: 'tmp/kafka-logs-4'
+  kafka3:
+    image: confluentinc/cp-server:6.0.1
+    hostname: kafka3
+    container_name: kafka3
+    depends_on:
+      - zookeeper
+    ports:
+      - "39092:39092"
+      - "9103:9103"
+    environment:
+      KAFKA_BROKER_ID: 2
+      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      # changed localhost to broker in PLAINTEXT_HOST
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka3:39092,PLAINTEXT_HOST://kafka3:9092
+      KAFKA_METRIC_REPORTERS: io.confluent.metrics.reporter.ConfluentMetricsReporter
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 2
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      KAFKA_CONFLUENT_LICENSE_TOPIC_REPLICATION_FACTOR: 2
+      KAFKA_CONFLUENT_BALANCER_TOPIC_REPLICATION_FACTOR: 2
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 2
+      KAFKA_JMX_PORT: 9103
+      KAFKA_JMX_HOSTNAME: localhost
+      KAFKA_CONFLUENT_SCHEMA_REGISTRY_URL: http://schema-registry:8081
+      CONFLUENT_HTTP_SERVER_LISTENERS: http://localhost:8091
+      CONFLUENT_METRICS_REPORTER_BOOTSTRAP_SERVERS: kafka3:9092
+      CONFLUENT_METRICS_REPORTER_TOPIC_REPLICAS: 2
+      CONFLUENT_METRICS_ENABLE: 'true'
+      CONFLUENT_SUPPORT_CUSTOMER_ID: 'anonymous'
+      CONFLUENT_BALANCER_ENABLE: 'true'
+      KAFKA_LOGS_DIR: 'tmp/kafka-logs-3'
 
   schema-registry:
     image: confluentinc/cp-schema-registry:6.0.1
@@ -182,6 +116,7 @@ services:
     depends_on:
       - kafka1
       - kafka2
+      - kafka3
       # - broker-2
       # - broker-3
       # - broker-4
@@ -201,6 +136,7 @@ services:
     depends_on:
       - kafka1
       - kafka2
+      - kafka3
       - zookeeper
       - schema-registry
     ports:
@@ -236,7 +172,7 @@ services:
     depends_on:
       - kafka1
       - kafka2
-      # - broker-2
+      - kafka3
       # - broker-3
       # - broker-4
       - schema-registry
@@ -263,6 +199,7 @@ services:
     depends_on:
       - kafka1
       - kafka2
+      - kafka3
       # - broker-2
       # - broker-3
       # - broker-4
