--- a/apache/Dockerfile
+++ b/apache/Dockerfile
@@ -7,19 +7,18 @@
 FROM ubuntu:18.04
 
 RUN apt-get update && apt-get install -y apache2 \
-    libapache2-mod-wsgi \
+    libapache2-mod-wsgi-py3 \
     build-essential \
-    python \
-    python-dev\
-    python-pip \
+    python3 \
+    python3-pip \
     vim \
  && apt-get clean \
  && apt-get autoremove \
  && rm -rf /var/lib/apt/lists/*
 
 # Copy over and install the requirements
-COPY ./app/requirements.txt /var/www/apache-flask/app/requirements.txt
-RUN pip install -r /var/www/apache-flask/app/requirements.txt
+COPY ./requirements.txt /var/www/apache-flask/requirements.txt
+RUN pip3 install -r /var/www/apache-flask/requirements.txt
 
 # Copy over the apache configuration file and enable the site
 COPY ./apache-flask.conf /etc/apache2/sites-available/apache-flask.conf
