--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -142,6 +142,39 @@ services:
       CONFLUENT_BALANCER_ENABLE: 'true'
       KAFKA_LOGS_DIR: 'tmp/kafka-logs-4'
 
+  kafka5:
+    image: confluentinc/cp-server:6.0.1
+    hostname: kafka5
+    container_name: kafka5
+    depends_on:
+      - zookeeper
+    ports:
+      - "59092:59092"
+      - "9105:9105"
+    environment:
+      KAFKA_BROKER_ID: 4
+      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      # changed localhost to broker in PLAINTEXT_HOST
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka5:59092,PLAINTEXT_HOST://kafka5:9092
+      KAFKA_METRIC_REPORTERS: io.confluent.metrics.reporter.ConfluentMetricsReporter
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 2
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      KAFKA_CONFLUENT_LICENSE_TOPIC_REPLICATION_FACTOR: 2
+      KAFKA_CONFLUENT_BALANCER_TOPIC_REPLICATION_FACTOR: 2
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 2
+      KAFKA_JMX_PORT: 9105
+      KAFKA_JMX_HOSTNAME: localhost
+      KAFKA_CONFLUENT_SCHEMA_REGISTRY_URL: http://schema-registry:8081
+      CONFLUENT_HTTP_SERVER_LISTENERS: http://localhost:8094
+      CONFLUENT_METRICS_REPORTER_BOOTSTRAP_SERVERS: kafka5:9092
+      CONFLUENT_METRICS_REPORTER_TOPIC_REPLICAS: 2
+      CONFLUENT_METRICS_ENABLE: 'true'
+      CONFLUENT_SUPPORT_CUSTOMER_ID: 'anonymous'
+      CONFLUENT_BALANCER_ENABLE: 'true'
+      KAFKA_LOGS_DIR: 'tmp/kafka-logs-4'
+
   schema-registry:
     image: confluentinc/cp-schema-registry:6.0.1
     hostname: schema-registry
