--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -183,9 +183,8 @@ services:
       - kafka1
       - kafka2
       - kafka3
-      # - broker-2
-      # - broker-3
-      # - broker-4
+      - kafka4
+      - kafka5
     ports:
       - "8081:8081"
     environment:
@@ -203,6 +202,8 @@ services:
       - kafka1
       - kafka2
       - kafka3
+      - kafka4
+      - kafka5
       - zookeeper
       - schema-registry
     ports:
@@ -239,8 +240,8 @@ services:
       - kafka1
       - kafka2
       - kafka3
-      # - broker-3
-      # - broker-4
+      - kafka4
+      - kafka5
       - schema-registry
       - connect
       - ksqldb-server
@@ -252,6 +253,7 @@ services:
       CONTROL_CENTER_KSQL_KSQLDB1_URL: "http://ksqldb-server:8088"
       CONTROL_CENTER_KSQL_KSQLDB1_ADVERTISED_URL: "http://localhost:8088"
       CONTROL_CENTER_SCHEMA_REGISTRY_URL: "http://schema-registry:8081"
+      CONTROL_CENTER_STREAMS_CPREST_URL: 'http://localhost:8090,http://localhost:8091,http://localhost:8092,http://localhost:8093,http://localhost:8094'
       CONTROL_CENTER_REPLICATION_FACTOR: 2
       CONTROL_CENTER_INTERNAL_TOPICS_PARTITIONS: 1
       CONTROL_CENTER_MONITORING_INTERCEPTOR_TOPIC_PARTITIONS: 1
@@ -266,9 +268,8 @@ services:
       - kafka1
       - kafka2
       - kafka3
-      # - broker-2
-      # - broker-3
-      # - broker-4
+      - kafka4
+      - kafka5
       - connect
     ports:
       - "8088:8088"
@@ -294,6 +295,8 @@ services:
       - kafka1
       - kafka2
       - kafka3
+      - kafka4
+      - kafka5
       - schema-registry
       - connect
       - ksqldb-server
