--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,13 +15,18 @@ services:
     image: confluentinc/cp-server:6.0.1
     hostname: kafka1
     container_name: kafka1
+    restart: always
+    ports:
+      - "19092:19092"
     environment:
       # BROKER SETTINGS
       KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
       KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'INTERNAL:PLAINTEXT'
-      KAFKA_ADVERTISED_LISTENERS: 'INTERNAL://kafka1:9092'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT'
+      KAFKA_ADVERTISED_LISTENERS: 'INTERNAL://kafka1:9092,EXTERNAL://kafka1:19092'
       KAFKA_KAFKA_REST_ADVERTISED_LISTENERS: http://localhost:8091
+      KAFKA_CONFLUENT_SCHEMA_REGISTRY_URL: http://schema-registry:8081
+
       # SELF BALANCING
       CONFLUENT_BALANCER_ENABLE: 'true'
       KAFKA_CONFLUENT_BALANCER_HEAL_UNEVEN_LOAD_TRIGGER: ANY_UNEVEN_LOAD
@@ -35,12 +40,16 @@ services:
     image: confluentinc/cp-server:6.0.1
     hostname: kafka2
     container_name: kafka2
+    restart: always
+    ports:
+      - "29092:29092"
     environment:
       # BROKER SETTINGS
       KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
       KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'INTERNAL:PLAINTEXT'
-      KAFKA_ADVERTISED_LISTENERS: 'INTERNAL://kafka2:9092'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT'
+      KAFKA_ADVERTISED_LISTENERS: 'INTERNAL://kafka2:9092,EXTERNAL://kafka2:29092'
+      KAFKA_CONFLUENT_SCHEMA_REGISTRY_URL: http://schema-registry:8081
 
       # SELF BALANCING
       CONFLUENT_BALANCER_ENABLE: 'true'
@@ -55,12 +64,16 @@ services:
     image: confluentinc/cp-server:6.0.1
     hostname: kafka3
     container_name: kafka3
+    restart: always
+    ports:
+      - "39092:39092"
     environment:
       # BROKER SETTINGS
       KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
       KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'INTERNAL:PLAINTEXT'
-      KAFKA_ADVERTISED_LISTENERS: 'INTERNAL://kafka3:9092'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT'
+      KAFKA_ADVERTISED_LISTENERS: 'INTERNAL://kafka3:9092,EXTERNAL://kafka3:39092'
+      KAFKA_CONFLUENT_SCHEMA_REGISTRY_URL: http://schema-registry:8081
 
       # SELF BALANCING
       CONFLUENT_BALANCER_ENABLE: 'true'
@@ -75,12 +88,16 @@ services:
     image: confluentinc/cp-server:6.0.1
     hostname: kafka4
     container_name: kafka4
+    restart: always
+    ports:
+      - "49092:49092"
     environment:
       # BROKER SETTINGS
       KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
       KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'INTERNAL:PLAINTEXT'
-      KAFKA_ADVERTISED_LISTENERS: 'INTERNAL://kafka4:9092'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT'
+      KAFKA_ADVERTISED_LISTENERS: 'INTERNAL://kafka4:9092,EXTERNAL://kafka4:49092'
+      KAFKA_CONFLUENT_SCHEMA_REGISTRY_URL: http://schema-registry:8081
 
       # SELF BALANCING
       CONFLUENT_BALANCER_ENABLE: 'true'
@@ -95,12 +112,16 @@ services:
     image: confluentinc/cp-server:6.0.1
     hostname: kafka5
     container_name: kafka5
+    restart: always
+    ports:
+      - "59092:59092"
     environment:
       # BROKER SETTINGS
       KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
       KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'INTERNAL:PLAINTEXT'
-      KAFKA_ADVERTISED_LISTENERS: 'INTERNAL://kafka5:9092'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT'
+      KAFKA_ADVERTISED_LISTENERS: 'INTERNAL://kafka5:9092,EXTERNAL://kafka5:59092'
+      KAFKA_CONFLUENT_SCHEMA_REGISTRY_URL: http://schema-registry:8081
 
       # SELF BALANCING
       CONFLUENT_BALANCER_ENABLE: 'true'
@@ -122,11 +143,32 @@ services:
       - kafka1
       - kafka2
       - kafka3
+      - kafka4
+      - kafka5
     environment:
       CONTROL_CENTER_BOOTSTRAP_SERVERS: kafka1:9092,kafka2:9092,kafka3:9092,kafka4:9092,kafka5:9092
       CONTROL_CENTER_ZOOKEEPER_CONNECT: 'zookeeper:2181'
       CONTROL_CENTER_REPLICATION_FACTOR: 3
       CONTROL_CENTER_STREAMS_CPREST_URL: "https://kafka1:8091,https://kafka2:8092,https://kafka3:8093,https://kafka4:8094,https://kafka5:8095"
+
+  schema-registry:
+    image: confluentinc/cp-schema-registry:6.0.1
+    hostname: schema-registry
+    container_name: schema-registry
+    ports:
+      - "8081:8081"
+    depends_on:
+      - kafka1
+      - kafka2
+      - kafka3
+      - kafka4
+      - kafka5
+    environment:
+      SCHEMA_REGISTRY_HOST_NAME: schema-registry
+      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: kafka1:9092,kafka2:9092,kafka3:9092,kafka4:9092,kafka5:9092
+      SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:8081
+    volumes:
+      - ./schema:/opt/app/schema/
 
   web:
     build: ./apache
