--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,6 @@ services:
     image: confluentinc/cp-server:6.0.1
     hostname: kafka1
     container_name: kafka1
-    restart: always
     ports:
       - "19092:19092"
     environment:
@@ -34,13 +33,12 @@ services:
 
       # METRIC REPORTERS
       KAFKA_METRIC_REPORTERS: io.confluent.metrics.reporter.ConfluentMetricsReporter
-      CONFLUENT_METRICS_REPORTER_BOOTSTRAP_SERVERS: kafka1:9092,kafka2:9092,kafka3:9092,kafka4:9092,kafka5:9092
+      CONFLUENT_METRICS_REPORTER_BOOTSTRAP_SERVERS: kafka1:9092,kafka2:9092,kafka3:9092
 
   kafka2:
     image: confluentinc/cp-server:6.0.1
     hostname: kafka2
     container_name: kafka2
-    restart: always
     ports:
       - "29092:29092"
     environment:
@@ -58,13 +56,12 @@ services:
 
       # METRIC REPORTERS
       KAFKA_METRIC_REPORTERS: io.confluent.metrics.reporter.ConfluentMetricsReporter
-      CONFLUENT_METRICS_REPORTER_BOOTSTRAP_SERVERS: kafka1:9092,kafka2:9092,kafka3:9092,kafka4:9092,kafka5:9092
+      CONFLUENT_METRICS_REPORTER_BOOTSTRAP_SERVERS: kafka1:9092,kafka2:9092,kafka3:9092
 
   kafka3:
     image: confluentinc/cp-server:6.0.1
     hostname: kafka3
     container_name: kafka3
-    restart: always
     ports:
       - "39092:39092"
     environment:
@@ -82,55 +79,7 @@ services:
 
       # METRIC REPORTERS
       KAFKA_METRIC_REPORTERS: io.confluent.metrics.reporter.ConfluentMetricsReporter
-      CONFLUENT_METRICS_REPORTER_BOOTSTRAP_SERVERS: kafka1:9092,kafka2:9092,kafka3:9092,kafka4:9092,kafka5:9092
-
-  kafka4:
-    image: confluentinc/cp-server:6.0.1
-    hostname: kafka4
-    container_name: kafka4
-    restart: always
-    ports:
-      - "49092:49092"
-    environment:
-      # BROKER SETTINGS
-      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
-      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT'
-      KAFKA_ADVERTISED_LISTENERS: 'INTERNAL://kafka4:9092,EXTERNAL://kafka4:49092'
-      KAFKA_CONFLUENT_SCHEMA_REGISTRY_URL: http://schema-registry:8081
-
-      # SELF BALANCING
-      CONFLUENT_BALANCER_ENABLE: 'true'
-      KAFKA_CONFLUENT_BALANCER_HEAL_UNEVEN_LOAD_TRIGGER: ANY_UNEVEN_LOAD
-      KAFKA_CONFLUENT_BALANCER_HEAL_BROKER_FAILURE_THRESHOLD_MS: 5000
-
-      # METRIC REPORTERS
-      KAFKA_METRIC_REPORTERS: io.confluent.metrics.reporter.ConfluentMetricsReporter
-      CONFLUENT_METRICS_REPORTER_BOOTSTRAP_SERVERS: kafka1:9092,kafka2:9092,kafka3:9092,kafka4:9092,kafka5:9092
-
-  kafka5:
-    image: confluentinc/cp-server:6.0.1
-    hostname: kafka5
-    container_name: kafka5
-    restart: always
-    ports:
-      - "59092:59092"
-    environment:
-      # BROKER SETTINGS
-      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
-      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT'
-      KAFKA_ADVERTISED_LISTENERS: 'INTERNAL://kafka5:9092,EXTERNAL://kafka5:59092'
-      KAFKA_CONFLUENT_SCHEMA_REGISTRY_URL: http://schema-registry:8081
-
-      # SELF BALANCING
-      CONFLUENT_BALANCER_ENABLE: 'true'
-      KAFKA_CONFLUENT_BALANCER_HEAL_UNEVEN_LOAD_TRIGGER: ANY_UNEVEN_LOAD
-      KAFKA_CONFLUENT_BALANCER_HEAL_BROKER_FAILURE_THRESHOLD_MS: 5000
-
-      # METRIC REPORTERS
-      KAFKA_METRIC_REPORTERS: io.confluent.metrics.reporter.ConfluentMetricsReporter
-      CONFLUENT_METRICS_REPORTER_BOOTSTRAP_SERVERS: kafka1:9092,kafka2:9092,kafka3:9092,kafka4:9092,kafka5:9092
+      CONFLUENT_METRICS_REPORTER_BOOTSTRAP_SERVERS: kafka1:9092,kafka2:9092,kafka3:9092
 
   control-center:
     image: confluentinc/cp-enterprise-control-center:6.0.1
@@ -143,13 +92,12 @@ services:
       - kafka1
       - kafka2
       - kafka3
-      - kafka4
-      - kafka5
     environment:
-      CONTROL_CENTER_BOOTSTRAP_SERVERS: kafka1:9092,kafka2:9092,kafka3:9092,kafka4:9092,kafka5:9092
+      CONTROL_CENTER_BOOTSTRAP_SERVERS: kafka1:9092,kafka2:9092,kafka3:9092
       CONTROL_CENTER_ZOOKEEPER_CONNECT: 'zookeeper:2181'
-      CONTROL_CENTER_REPLICATION_FACTOR: 3
-      CONTROL_CENTER_STREAMS_CPREST_URL: "https://kafka1:8091,https://kafka2:8092,https://kafka3:8093,https://kafka4:8094,https://kafka5:8095"
+      CONTROL_CENTER_REPLICATION_FACTOR: 2
+      CONTROL_CENTER_STREAMS_CPREST_URL: "https://kafka1:8091,https://kafka2:8092,https://kafka3:8093"
+      CONTROL_CENTER_SCHEMA_REGISTRY_URL: "http://schema-registry:8081"
 
   schema-registry:
     image: confluentinc/cp-schema-registry:6.0.1
@@ -161,11 +109,9 @@ services:
       - kafka1
       - kafka2
       - kafka3
-      - kafka4
-      - kafka5
     environment:
       SCHEMA_REGISTRY_HOST_NAME: schema-registry
-      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: kafka1:9092,kafka2:9092,kafka3:9092,kafka4:9092,kafka5:9092
+      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: kafka1:9092,kafka2:9092,kafka3:9092
       SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:8081
     volumes:
       - ./schema:/opt/app/schema/
@@ -178,7 +124,6 @@ services:
       - zookeeper
     ports:
       - "80:80"
-    restart: always
     environment:
-      - BROKER_URL=kafka1:19092
+      - BROKER_URLS=kafka1:9092,kafka2:9092,kafka3:9092
       - SCHEMA_REGISTRY_URL=http://schema-registry:8081
